--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
+body {
+  background-color: #a5a58d;
+}
+.header{
+  width: 100vw;
   text-align: center;
-}
+  background-color: #4cc9f0;
+  margin-top: 0%;
+  height: 75px;
+  padding: 35px;
+  position: relative;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.page-content {
+  display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-items: stretch;
+	align-content: stretch;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.add-workout-form {
+  font-size: x-large;
+  align-items: center;
+  width: 50vw;
+  text-align: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  height: 60vh;
+  border: 2px black solid;
+
+}
+.add-button {
+  background-color: #4cc9f0;
+  width: 200px;
+  height: 60px;
+  border-radius: 10%;
+  margin-top: 0px;
+  margin: 20px;
+}
+.workout-list {
+  width: 50vw;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: stretch;
+    align-content: stretch;
+    border: 2px black solid;
+    text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-button:hover {
+  cursor: pointer;
+  background-color: #3a0ca3;
 }
