--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
   display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
-	justify-content: space-between;
+	/* justify-content: space-between; */
 	align-items: stretch;
 	align-content: stretch;
 }
@@ -27,7 +27,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 60vh;
+  height: 100vh;
   border: 2px black solid;
   background-color: #000000;
   color: white;
@@ -48,26 +48,34 @@ body {
   height: 70px;
 }
 .workout-list {
-  height: 175px;
-  width: 275px;
+  /* height: 175px;
+  width: 275px; */
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: flex-start;
 	align-items: center;
-	align-content: center;
+	align-content: flex-start;
   border: 2px black solid;
   text-align: center;
-  background-color: #000000;
   color: white;
   padding-left: 20px;
+  width: 70vw;
+}
+.workout {
+  background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  margin: 10px;
 }
 .delete-button {
   background-color: #4cc9f0;
   width: 100px;
   height: 40px;
   border-radius: 10%;
-  margin-left: 30%;
+  /* margin-left: 30%; */
   margin-top: 10px;
 }
 .delete-button:hover {
@@ -80,7 +88,7 @@ body {
   width: 100px;
   height: 40px;
   border-radius: 10%;
-  margin-left: 30%;
+  /* margin-left: 30%; */
   margin-top: 10px;
 }
 .update-button:hover {
